@@ -1,0 +1,14 @@
+<?php
+/**
+ * @package Include/help/ja
+ */
+?>
+<h1>Pandora FMS - ヘルプ</h1>
+<h3>概要</h3>
+<p>
+これは、Pandora FMS コンソールのオンラインヘルプです。このヘルプは簡単に説明することを目的としたもので、Pandora FMS の使い方を教えることを意図しているわけではありません。Pandora FMS の公式ドキュメントは約 900ページにも及びます。全体を読む必要はありませんが、参照できるようにダウンロードしておくことをお勧めします。
+
+<br><br>
+<a href="http://pandorafms.com/pandora/doc/"><b>公式ドキュメントのダウンロード</b></a>
+ 
+</p>
